# hunk

./: .gitignore  Cargo.toml  LICENSE  README.md
runner/: Cargo.toml  README.md
runner/src/: ciphers.rs  encoder.rs  error.rs  lib.rs  main.rs
runner/src/commands/: base.rs  exfiltrate.rs  mod.rs
runner/src/encoders/: dns.rs  http.rs  mod.rs
runner/src/nodes/: file_chunk.rs  mod.rs  root.rs
shelter/: Cargo.toml  README.md
shelter/src/: event_handler.rs  http.rs  lib.rs  main.rs
shelter/src/commands/: base.rs  dns.rs  http.rs  mod.rs
shelter/src/error/: app.rs  dns.rs  http.rs  mod.rs
shelter/src/nodes/: file_chunk.rs  mod.rs  root.rs
src/: encoder.rs  lib.rs  main.rs
src/commands/: base.rs  exfiltrate.rs  mod.rs
