[workspace]
resolver = "2"
members = [
    "runner",
    "shelter",
]

[workspace.dependencies]
base64 = "0.22.1"
clap = { version = "4.5.53", features = ["derive"] }
hex = "0.4.3"
hickory-resolver = { version = "0.25.2", features = ["serde"] }
tokio = { version = "1.48.0", features = ["macros", "net"] }
log = "0.4.28"
chacha20poly1305 = "0.10.1"
reqwest = { version = "0.12.15", features = ["blocking"] }
shellexpand = "3.1.1"
