[package]
name = "runner"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.32", features = ["derive"] }
hex = "0.4.3"
hickory-resolver = { version = "0.25.2", features = ["serde"] }
reqwest = { version = "0.12.15", features = ["blocking"] }
tokio = "1.48.0"
