[package]
name = "runner"
version = "0.1.0"
edition = "2021"

[dependencies]
base64.workspace = true
chacha20poly1305.workspace = true
chrono = "0.4.42"
clap.workspace = true
env_logger = "0.11.8"
hex.workspace = true
hickory-resolver.workspace = true
log.workspace = true
reqwest.workspace = true
shellexpand.workspace = true
tokio.workspace = true
urandom = "0.2.2"
