[package]
name = "shelter"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.12.1"
async-trait = "0.1.89"
base64.workspace = true
clap.workspace = true
hex.workspace = true
hickory-resolver.workspace = true
hickory-server = "0.25.2"
log.workspace = true
tokio.workspace = true
tracing-actix-web = "0.7.19"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
chacha20poly1305.workspace = true
reqwest.workspace = true
